crates/plotnik-compiler/src/emit/snapshots/plotnik_compiler__emit__emit_tests__alternation_branches_share_head_node.snap
---
source: crates/plotnik-compiler/src/emit/emit_tests.rs
---
Test = [(object (pair)) (object (spread_element))]
---
[strings]
S0 "Beauty will save the world"
S1 "Test"
S2 "object"
S3 "pair"
S4 "spread_element"

[type_defs]
T0 = <Void>

[type_members]

[type_names]
N0: S1 → T0  ; Test

[entrypoints]
Test = 06 :: T0

[transitions]
_ObjWrap:
  00  -ε-  [Obj]                            02
  02       Trampoline                       03
  03  -ε-  [EndObj]                         05
  05                                        ▶

Test:
  06  -ε-                                   13, 14
  08  └‣─  (pair)                           09
  09  ─‣┘  _                                12
  10  └‣─  (spread_element)                 11
  11  ─‣┘  _                                12
  12                                        ▶
  13   !   (object)                         08
  14   !   (object)                         10
