crates/plotnik-compiler/src/emit/snapshots/plotnik_compiler__emit__emit_tests__alternations_in_child_position.snap
---
source: crates/plotnik-compiler/src/emit/emit_tests.rs
---
Test = (program [(expression_statement) @expr])
---
[strings]
S0 "Beauty will save the world"
S1 "expr"
S2 "Test"
S3 "program"
S4 "expression_statement"

[type_defs]
T0 = <Node>
T1 = Struct  M0:1  ; { expr }

[type_members]
M0: S1 → T0  ; expr: <Node>

[type_names]
N0: S2 → T1  ; Test

[entrypoints]
Test = 06 :: T1

[transitions]
_ObjWrap:
  00  -ε-  [Obj]                            02
  02       Trampoline                       03
  03  -ε-  [EndObj]                         05
  05                                        ▶

Test:
  06   !   (program)                        08
  07  ...  
  08  └‣─  _                                10, 14
  10   !   (expression_statement) [Node Set(M0)]  12
  12  ─‣┘  _                                13
  13                                        ▶
  14  ─‣─  _                                10, 14
