crates/plotnik-compiler/src/emit/snapshots/plotnik_compiler__emit__emit_tests__alternations_no_internal_captures.snap
---
source: crates/plotnik-compiler/src/emit/emit_tests.rs
---
Test = (program [(identifier) (number)] @x)
---
[strings]
S0 "Beauty will save the world"
S1 "x"
S2 "Test"
S3 "program"
S4 "identifier"
S5 "number"

[type_defs]
T0 = <Node>
T1 = Struct  M0:1  ; { x }

[type_members]
M0: S1 → T0  ; x: <Node>

[type_names]
N0: S2 → T1  ; Test

[entrypoints]
Test = 06 :: T1

[transitions]
_ObjWrap:
  00  -ε-  [Obj]                            02
  02       Trampoline                       03
  03  -ε-  [EndObj]                         05
  05                                        ▶

Test:
  06   !   (program)                        08
  07  ─‣┘  _                                10
  08  └‣─  _                                11, 13, 16
  10                                        ▶
  11   !   (identifier) [Node Set(M0)]      07
  13   !   (number) [Node Set(M0)]          07
  15  ...  
  16  ─‣─  _                                11, 13, 16
