crates/plotnik-compiler/src/emit/snapshots/plotnik_compiler__emit__emit_tests__alternations_null_injection.snap
---
source: crates/plotnik-compiler/src/emit/emit_tests.rs
---
Test = [(identifier) @x (number) @y]
---
[strings]
S0 "Beauty will save the world"
S1 "x"
S2 "y"
S3 "Test"
S4 "identifier"
S5 "number"

[type_defs]
T0 = <Node>
T1 = Struct  M0:2  ; { x, y }
T2 = Optional(T0)  ; <Node>?

[type_members]
M0: S1 → T2  ; x: T2
M1: S2 → T2  ; y: T2

[type_names]
N0: S3 → T1  ; Test

[entrypoints]
Test = 06 :: T1

[transitions]
_ObjWrap:
  00  -ε-  [Obj]                            02
  02       Trampoline                       03
  03  -ε-  [EndObj]                         05
  05                                        ▶

Test:
  06  -ε-                                   09, 12
  08                                        ▶
  09   !   [Null Set(M1)] (identifier) [Node Set(M0)]  08
  12   !   [Null Set(M0)] (number) [Node Set(M1)]  08
