crates/plotnik-compiler/src/emit/snapshots/plotnik_compiler__emit__emit_tests__alternations_tagged_in_field_constraint.snap
---
source: crates/plotnik-compiler/src/emit/emit_tests.rs
---
Test = (pair key: [A: (identifier) @a B: (number)] @kind)
---
[strings]
S0 "Beauty will save the world"
S1 "a"
S2 "A"
S3 "B"
S4 "kind"
S5 "Test"
S6 "pair"
S7 "identifier"
S8 "number"
S9 "key"

[type_defs]
T0 = <Void>
T1 = <Node>
T2 = Struct  M0:1  ; { a }
T3 = Enum    M1:2  ; A | B
T4 = Struct  M3:1  ; { kind }

[type_members]
M0: S1 → T1  ; a: <Node>
M1: S2 → T2  ; A: T2
M2: S3 → T0  ; B: <Void>
M3: S4 → T3  ; kind: T3

[type_names]
N0: S5 → T4  ; Test

[entrypoints]
Test = 06 :: T4

[transitions]
_ObjWrap:
  00  -ε-  [Obj]                            02
  02       Trampoline                       03
  03  -ε-  [EndObj]                         05
  05                                        ▶

Test:
  06   !   (pair)                           08
  07  ...  
  08  └‣─  key: _                           11, 14
  10                                        ▶
  11   !   [Enum(M1)] (identifier) [Node Set(M0) EndEnum]  16
  14   !   [Enum(M2)] (number) [EndEnum]    16
  16  ─‣┘  [Set(M3)] _                      10
