crates/plotnik-compiler/src/emit/snapshots/plotnik_compiler__emit__emit_tests__alternations_tagged_with_definition_ref.snap
---
source: crates/plotnik-compiler/src/emit/emit_tests.rs
---
Inner = (identifier) @name
Test = [A: (Inner)  B: (number) @b] @item
---
[strings]
S0 "Beauty will save the world"
S1 "name"
S2 "b"
S3 "A"
S4 "B"
S5 "item"
S6 "Inner"
S7 "Test"
S8 "identifier"
S9 "number"

[type_defs]
T0 = <Node>
T1 = Struct  M0:1  ; { name }
T2 = Struct  M1:1  ; { b }
T3 = Enum    M2:2  ; A | B
T4 = Struct  M4:1  ; { item }

[type_members]
M0: S1 → T0  ; name: <Node>
M1: S2 → T0  ; b: <Node>
M2: S3 → T1  ; A: Inner
M3: S4 → T2  ; B: T2
M4: S5 → T3  ; item: T3

[type_names]
N0: S6 → T1  ; Inner
N1: S7 → T4  ; Test

[entrypoints]
Inner = 06 :: T1
Test  = 09 :: T4

[transitions]
_ObjWrap:
  00  -ε-  [Obj]                            02
  02       Trampoline                       03
  03  -ε-  [EndObj]                         05
  05                                        ▶

Inner:
  06   !   (identifier) [Node Set(M0)]      08
  08                                        ▶

Test:
  09  -ε-                                   21, 24
  11                                        ▶
  12  -ε-  [Set(M4)]                        11
  14  -ε-  [EndEnum]                        12
  16  -ε-  [EndObj]                         14
  18   !   (Inner)                          06 : 16
  19  -ε-  [Obj]                            18
  21  -ε-  [Enum(M2)]                       19
  23  ...  
  24   !   [Enum(M3)] (number) [Node Set(M1) EndEnum Set(M4)]  11
