crates/plotnik-compiler/src/emit/snapshots/plotnik_compiler__emit__emit_tests__alternations_unlabeled.snap
---
source: crates/plotnik-compiler/src/emit/emit_tests.rs
---
Test = [(identifier) @id (string) @str]
---
[strings]
S0 "Beauty will save the world"
S1 "id"
S2 "str"
S3 "Test"
S4 "identifier"
S5 "string"

[type_defs]
T0 = <Node>
T1 = Struct  M0:2  ; { id, str }
T2 = Struct  M2:1  ; { id }
T3 = Struct  M3:1  ; { str }
T4 = Optional(T0)  ; <Node>?

[type_members]
M0: S1 → T4  ; id: T4
M1: S2 → T4  ; str: T4
M2: S1 → T0  ; id: <Node>
M3: S2 → T0  ; str: <Node>

[type_names]
N0: S3 → T1  ; Test

[entrypoints]
Test = 06 :: T1

[transitions]
_ObjWrap:
  00  -ε-  [Obj]                            02
  02       Trampoline                       03
  03  -ε-  [EndObj]                         05
  05                                        ▶

Test:
  06  -ε-                                   09, 12
  08                                        ▶
  09   !   [Null Set(M1)] (identifier) [Node Set(M0)]  08
  12   !   [Null Set(M0)] (string) [Node Set(M1)]  08
