crates/plotnik-compiler/src/emit/snapshots/plotnik_compiler__emit__emit_tests__anchors_after_alternation_anonymous_follower_stays_conservative.snap
---
source: crates/plotnik-compiler/src/emit/emit_tests.rs
---
Test = {[(number) (string)] . ","}
---
[strings]
S0 "Beauty will save the world"
S1 "Test"
S2 "number"
S3 "string"
S4 ","

[type_defs]
T0 = <Void>

[type_members]

[type_names]
N0: S1 → T0  ; Test

[entrypoints]
Test = 06 :: T0

[transitions]
_ObjWrap:
  00  -ε-  [Obj]                            02
  02       Trampoline                       03
  03  -ε-  [EndObj]                         05
  05                                        ▶

Test:
  06  -ε-                                   10, 11
  08                                        ▶
  09  ─◦─  ","                              08
  10   !   (number)                         09
  11   !   (string)                         09
